# car-drive-app

./: .gitignore  README.md  pyproject.toml  settings.py
car_drive_app/: __init__.py  car.py  game.py
car_drive_app/car/: __init__.py  acceleration.py  base_car.py  car.py  rigid_body.py  turn.py  wheel.py  wheel_old.py
car_drive_app/car/wheel/: __init__.py  back_wheel.py  base_wheel.py  front_wheel.py
car_drive_app/cartesians/: __init__.py  vector.py
car_drive_app/track/: __init__.py  base_track.py  exceptions.py  gate.py  generator.py  track.py  validator.py
car_drive_app/track/creator/: corner_points.py  creator.py
car_drive_app/track/creator/points_and_circles/: __init__.py  control_point.py  corner_points.py  creator.py  curve_finder.py
car_drive_app/track/creator/points_and_splines/: __init__.py  catmull_rom.py  control_point.py  corner_points.py  creator.py
car_drive_app/track/generator/: __init__.py  catmull_rom.py  convex_hull.py  displaced_midpoints.py  fix_angles.py  generator.py  push_apart.py  random_points.py
scripts/: creator.py  generator.py  main.py
tests/: game.py  wheel.py  wheel_test.py
tests/car/: car.py  rigid_body.py  wheel.py
tests/track/generator/: catmull_rom.py  convex_hull.py  displaced_midpoints.py  draw_track_generation.py  fix_angles.py  push_apart.py  random_points.py
